fixed navbar style issue on new homepage on mobile devices.

--- a/BenZawacki/war/css/main.less
+++ b/BenZawacki/war/css/main.less
@@ -114,14 +114,6 @@ body {
 
 @media (max-width: 979px) {
 
-  .container.navbar-wrapper {
-    margin-bottom: 0;
-    width: auto;
-  }
-  .navbar-inner {
-    border-radius: 0;
-    margin: -20px 0;
-  }
 
   .carousel .item {
     height: 500px;
@@ -146,10 +138,6 @@ body {
 
 
 @media (max-width: 767px) {
-
-  .navbar-inner {
-    margin: -20px;
-  }
 
   .carousel {
     margin-left: -20px;
